[workspace]
members = [
	"crates/middb-core",
	"crates/middb-query",
	"crates/middb-network",
	"crates/middb-cli",
	"bindings/python",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["William Zeng"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/willzeng274/middb"

[workspace.dependencies]
tokio = { version = "1.48", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
thiserror = "2.0"
tracing = "0.1"
parking_lot = "0.12"
crossbeam = "0.8"
dashmap = "6.1"
