[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "middb"
version = "0.1.0"
description = "Python bindings for MidDB"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
]

[tool.maturin]
module-name = "middb.middb_python"
python-source = "python"
