[package]
name = "middb-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
parking_lot.workspace = true
crossbeam.workspace = true
serde.workspace = true

[dev-dependencies]
proptest = "1.5"
criterion = "0.5"
tempfile = "3.0"

[[bench]]
name = "skiplist"
harness = false
