[package]
name = "middb-network"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
bincode.workspace = true
middb-core = { path = "../middb-core" }

[dev-dependencies]
tempfile = "3.0"
